--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ runs:
   steps:
     - name: Setup SSH key and known_hosts
       shell: bash
+      continue-on-error: true
       if: ${{ inputs.private-key != '' && inputs.private-key != null }}
       run: |
         mkdir -p ~/.ssh
@@ -37,7 +38,14 @@ runs:
     - name: Push repository to target
       if: ${{ inputs.private-key != '' && inputs.private-key != null }}
       shell: bash
+      continue-on-error: true
       run: |
-        git remote add mirror "${{ inputs.target-url }}"
+        if git remote | grep -q mirror; then
+          echo "Remote 'mirror' already exists"
+          git remote set-url mirror "${{ inputs.target-url }}" 
+        else
+          git remote add mirror "${{ inputs.target-url }}" 
+        fi
+        
         # 使用 --mirror 同步所有 refs（分支、tag 等）
         git push --mirror mirror
