--- a/action.yml
+++ b/action.yml
@@ -48,4 +48,7 @@ runs:
         fi
         
         # 使用 --mirror 同步所有 refs（分支、tag 等）
-        git push --mirror mirror --quiet
+        # git push --mirror mirror --quiet
+
+        git push mirror --all --quiet
+        git push mirror --tags --quiet
